[gd_scene load_steps=51 format=3 uid="uid://c7jjs3b6jhx1b"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_86h0n"]
[ext_resource type="Texture2D" uid="uid://cxb5juruagn8j" path="res://Characters/Allies/Eirion/Attacks.png" id="2_yrk55"]
[ext_resource type="Texture2D" uid="uid://dx0v8oyv68vab" path="res://Characters/Allies/Eirion/Death.png" id="3_i823b"]
[ext_resource type="Texture2D" uid="uid://b41gjnknsodb" path="res://Characters/Allies/Eirion/Hurt.png" id="4_xj5pk"]
[ext_resource type="Texture2D" uid="uid://cj3lbexo4nlvx" path="res://Characters/Allies/Eirion/Idle.png" id="5_hg1qe"]
[ext_resource type="Texture2D" uid="uid://bb4wbh25t7gjm" path="res://Characters/Allies/Eirion/Run.png" id="6_wxe8x"]
[ext_resource type="Script" path="res://Scripts/player_control.gd" id="7_ydfuu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mg8gg"]
atlas = ExtResource("2_yrk55")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cf0l1"]
atlas = ExtResource("2_yrk55")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iinnx"]
atlas = ExtResource("2_yrk55")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gieuw"]
atlas = ExtResource("2_yrk55")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_esy7v"]
atlas = ExtResource("2_yrk55")
region = Rect2(512, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1r07"]
atlas = ExtResource("2_yrk55")
region = Rect2(640, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8onf"]
atlas = ExtResource("2_yrk55")
region = Rect2(768, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6o1b"]
atlas = ExtResource("2_yrk55")
region = Rect2(896, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ceijq"]
atlas = ExtResource("2_yrk55")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7a4l6"]
atlas = ExtResource("2_yrk55")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nprkw"]
atlas = ExtResource("2_yrk55")
region = Rect2(256, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctwnb"]
atlas = ExtResource("2_yrk55")
region = Rect2(384, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yipjp"]
atlas = ExtResource("2_yrk55")
region = Rect2(512, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0x7ya"]
atlas = ExtResource("2_yrk55")
region = Rect2(640, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3joqk"]
atlas = ExtResource("2_yrk55")
region = Rect2(768, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqr6e"]
atlas = ExtResource("2_yrk55")
region = Rect2(896, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6mcx"]
atlas = ExtResource("3_i823b")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_de04h"]
atlas = ExtResource("3_i823b")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dujg"]
atlas = ExtResource("3_i823b")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_08s22"]
atlas = ExtResource("3_i823b")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_unbp3"]
atlas = ExtResource("4_xj5pk")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbnat"]
atlas = ExtResource("4_xj5pk")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wutpd"]
atlas = ExtResource("4_xj5pk")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0ifg"]
atlas = ExtResource("5_hg1qe")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ragw"]
atlas = ExtResource("5_hg1qe")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ae1gh"]
atlas = ExtResource("5_hg1qe")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t70sm"]
atlas = ExtResource("5_hg1qe")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_me5w0"]
atlas = ExtResource("5_hg1qe")
region = Rect2(0, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f8le"]
atlas = ExtResource("5_hg1qe")
region = Rect2(128, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iw2ye"]
atlas = ExtResource("5_hg1qe")
region = Rect2(0, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfu5i"]
atlas = ExtResource("5_hg1qe")
region = Rect2(128, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mc5tj"]
atlas = ExtResource("6_wxe8x")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgfaq"]
atlas = ExtResource("6_wxe8x")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eluww"]
atlas = ExtResource("6_wxe8x")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mj4gg"]
atlas = ExtResource("6_wxe8x")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuund"]
atlas = ExtResource("6_wxe8x")
region = Rect2(0, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eilq"]
atlas = ExtResource("6_wxe8x")
region = Rect2(128, 128, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_op8ro"]
atlas = ExtResource("6_wxe8x")
region = Rect2(0, 192, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlx1x"]
atlas = ExtResource("6_wxe8x")
region = Rect2(128, 192, 128, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_knyke"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mg8gg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cf0l1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iinnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gieuw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_esy7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1r07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8onf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6o1b")
}],
"loop": true,
"name": &"attack",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ceijq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7a4l6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nprkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctwnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yipjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0x7ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3joqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqr6e")
}],
"loop": true,
"name": &"attack1",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6mcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_de04h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dujg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08s22")
}],
"loop": true,
"name": &"death",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_unbp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbnat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wutpd")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0ifg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ragw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ae1gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t70sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me5w0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f8le")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iw2ye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfu5i")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mc5tj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgfaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eluww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mj4gg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuund")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eilq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op8ro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlx1x")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1k5lx"]
radius = 9.75
height = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_v2m66"]
radius = 39.3645

[sub_resource type="LabelSettings" id="LabelSettings_y6xtd"]

[node name="Player" type="CharacterBody2D"]
position = Vector2(-3, -54)
scale = Vector2(0.8, 0.8)
script = ExtResource("1_86h0n")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 44)
scale = Vector2(0.9, 0.9)
sprite_frames = SubResource("SpriteFrames_knyke")
animation = &"attack1"
frame_progress = 0.866997

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 55.25)
shape = SubResource("CapsuleShape2D_1k5lx")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, 53)
shape = SubResource("CircleShape2D_v2m66")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="Timer2" type="Timer" parent="."]
wait_time = 5.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(3, 55)
zoom = Vector2(2, 2)

[node name="Label1" type="Label" parent="."]
offset_left = -16.0
offset_top = 5.0
offset_right = 23.0
offset_bottom = 28.0
size_flags_vertical = 1
text = "
"
label_settings = SubResource("LabelSettings_y6xtd")

[node name="PlayerControl" type="Node" parent="."]
script = ExtResource("7_ydfuu")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
